// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstructorCoursesPageComponent should snap when it is undeletable and unrestorable 1`] = `
<tm-instructor-courses-page
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  archivedCourses={[Function Array]}
  canDeleteAll="false"
  canRestoreAll="false"
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  httpRequestService={[Function HttpRequestService]}
  isAddNewCourseFormExpanded="false"
  isRecycleBinExpanded="false"
  modalService={[Function NgbModal]}
  route={[Function ActivatedRoute]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableSortBy="0"
  tableSortOrder={[Function Number]}
>
  <div>
    <button
      class="btn btn-primary"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><div
    class="course-section"
    hidden=""
  >
    <tm-add-course-form />
  </div><div
    class="course-section"
  >
    <div
      class="table-responsive"
    >
      <table
        class="table table-striped table-bordered margin-0"
      >
        <thead>
          <tr
            class="bg-primary text-white"
          >
            <th
              class="sortable-header"
            >
               Course ID 
              
              <span>
                <i
                  class="fas fa-sort"
                />
              </span>
              
              
            </th>
            <th
              class="sortable-header"
            >
               Course Name 
              
              <span>
                <i
                  class="fas fa-sort"
                />
              </span>
              
              
            </th>
            <th
              class="sortable-header"
            >
               Creation Date 
              
              <span>
                <i
                  class="fas fa-sort"
                />
              </span>
              
              
            </th>
            <th>
              Sections
            </th>
            <th>
              Teams
            </th>
            <th>
              Total Students
            </th>
            <th>
              Total Unregistered
            </th>
            <th
              class="text-center"
            >
              Action(s)
            </th>
          </tr>
        </thead>
        <tbody>
          
          <tr>
            <td>
              CS3281
            </td>
            <td>
              Modifiable Students and Courses
            </td>
            <td
              container="body"
              ng-reflect-container="body"
              ng-reflect-ngb-tooltip="Mon, 05 Nov 2018, 8:15AM"
            >
               5 Nov 2018 
            </td>
            <td>
              
              
              <span>
                 1 
              </span>
            </td>
            <td>
              
              
              <span>
                 1 
              </span>
            </td>
            <td>
              
              
              <span>
                 1 
              </span>
            </td>
            <td>
              
              
              <span>
                 1 
              </span>
            </td>
            <td
              class="text-center actions-cell"
            >
              
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="Enroll student into the course"
                ng-reflect-query-params="[object Object]"
                ng-reflect-router-link="/web/instructor/courses/enroll"
                ngbtooltip="Enroll student into the course"
                routerlink="/web/instructor/courses/enroll"
                tabindex="0"
              >
                 Enroll 
              </button>
              
              
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="View, edit and send invitation"
                ng-reflect-query-params="[object Object]"
                ng-reflect-router-link="/web/instructor/courses/detail"
                ngbtooltip="View, edit and send invitation emails to the students in the course"
                routerlink="/web/instructor/courses/details"
                tabindex="0"
              >
                 View 
              </button>
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="Edit Course information and in"
                ng-reflect-query-params="[object Object]"
                ng-reflect-router-link="/web/instructor/courses/edit"
                ngbtooltip="Edit Course information and instructor list"
                routerlink="/web/instructor/courses/edit"
                tabindex="0"
              >
                 Edit 
              </button>
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="Archive the course so that it "
                ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still
                  access it from the 'Courses' tab)"
              >
                 Archive 
              </button>
              
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="Delete the course and its corr"
                ngbtooltip="Delete the course and its corresponding students and sessions"
              >
                 Delete 
              </button>
              
              
            </td>
          </tr>
          <tr>
            <td>
              CS3282
            </td>
            <td>
              Nothing modifiable
            </td>
            <td
              container="body"
              ng-reflect-container="body"
              ng-reflect-ngb-tooltip="Sat, 02 Feb 2019, 8:15AM"
            >
               2 Feb 2019 
            </td>
            <td>
              
              
              <span>
                 2 
              </span>
            </td>
            <td>
              
              
              <span>
                 2 
              </span>
            </td>
            <td>
              
              
              <span>
                 2 
              </span>
            </td>
            <td>
              
              
              <span>
                 2 
              </span>
            </td>
            <td
              class="text-center actions-cell"
            >
              
              
              <button
                class="btn btn-light btn-sm disabled"
              >
                 Enroll 
              </button>
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="View, edit and send invitation"
                ng-reflect-query-params="[object Object]"
                ng-reflect-router-link="/web/instructor/courses/detail"
                ngbtooltip="View, edit and send invitation emails to the students in the course"
                routerlink="/web/instructor/courses/details"
                tabindex="0"
              >
                 View 
              </button>
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="Edit Course information and in"
                ng-reflect-query-params="[object Object]"
                ng-reflect-router-link="/web/instructor/courses/edit"
                ngbtooltip="Edit Course information and instructor list"
                routerlink="/web/instructor/courses/edit"
                tabindex="0"
              >
                 Edit 
              </button>
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="Archive the course so that it "
                ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still
                  access it from the 'Courses' tab)"
              >
                 Archive 
              </button>
              
              
              <button
                class="btn btn-light btn-sm disabled"
              >
                 Delete 
              </button>
            </td>
          </tr>
        </tbody>
        
      </table>
      
    </div>
  </div><div
    class="course-section"
  >
    <h2
      class="text-muted"
    >
      <span
        class="fa fa-file-archive"
      />
       Archived Courses 
    </h2>
    <div
      class="table-responsive"
    >
      <table
        class="table table-striped table-bordered margin-0"
      >
        <thead>
          <tr
            class="bg-info text-white"
          >
            <th>
              Course ID
            </th>
            <th>
              Course Name
            </th>
            <th>
              Creation Date
            </th>
            <th
              class="text-center"
            >
              Action(s)
            </th>
          </tr>
        </thead>
        <tbody>
          
          <tr>
            <td>
              CS2104
            </td>
            <td>
              Can modify archived
            </td>
            <td
              container="body"
              ng-reflect-container="body"
              ng-reflect-ngb-tooltip="Tue, 05 Nov 2002, 8:15AM"
            >
               5 Nov 2002 
            </td>
            <td
              class="text-center"
            >
              <button
                class="btn btn-light btn-sm"
              >
                 Unarchive 
              </button>
              
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="Delete the course and its corr"
                ngbtooltip="Delete the course and its corresponding students and sessions"
              >
                 Delete 
              </button>
              
              
            </td>
          </tr>
          <tr>
            <td>
              CS2106
            </td>
            <td>
              Cannot modify archived
            </td>
            <td
              container="body"
              ng-reflect-container="body"
              ng-reflect-ngb-tooltip="Tue, 05 Nov 2002, 8:15AM"
            >
               5 Nov 2002 
            </td>
            <td
              class="text-center"
            >
              <button
                class="btn btn-light btn-sm"
              >
                 Unarchive 
              </button>
              
              
              <button
                class="btn btn-light btn-sm disabled"
              >
                 Delete 
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div><div
    class="row course-section margin-top-30px"
  >
    <div
      class="col-12"
    >
      <h2
        class="text-muted"
      >
        <span
          class="fa fa-trash-alt"
        />
         Deleted Courses 
      </h2>
      <div
        class="card bg-light top-padded"
      >
        <div
          class="card-header bg-secondary recycle-bin-header"
        >
          <div
            class="row align-items-center"
          >
            <div
              class="col-6 text-white"
            >
              <b>
                Recycle Bin
              </b>
            </div>
            <div
              class="col-6 text-right bin-header-button"
            >
              
              
              <button
                class="btn btn-light btn-sm disabled"
              >
                <i
                  class="fas fa-check"
                />
                 Restore All 
              </button>
              
              
              <button
                class="btn btn-light btn-sm disabled text-danger"
              >
                <i
                  class="fas fa-times"
                />
                 Delete All 
              </button>
              
              <i
                class="fas fa-chevron-down text-white"
              />
              
            </div>
          </div>
        </div>
        
      </div>
    </div>
  </div>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap with all courses in course stats 1`] = `
<tm-instructor-courses-page
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  archivedCourses={[Function Array]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  httpRequestService={[Function HttpRequestService]}
  isAddNewCourseFormExpanded="false"
  isRecycleBinExpanded="false"
  modalService={[Function NgbModal]}
  route={[Function ActivatedRoute]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableSortBy="0"
  tableSortOrder={[Function Number]}
>
  <div>
    <button
      class="btn btn-primary"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><div
    class="course-section"
    hidden=""
  >
    <tm-add-course-form />
  </div><div
    class="course-section"
  >
    <div
      class="table-responsive"
    >
      <table
        class="table table-striped table-bordered margin-0"
      >
        <thead>
          <tr
            class="bg-primary text-white"
          >
            <th
              class="sortable-header"
            >
               Course ID 
              
              <span>
                <i
                  class="fas fa-sort"
                />
              </span>
              
              
            </th>
            <th
              class="sortable-header"
            >
               Course Name 
              
              <span>
                <i
                  class="fas fa-sort"
                />
              </span>
              
              
            </th>
            <th
              class="sortable-header"
            >
               Creation Date 
              
              <span>
                <i
                  class="fas fa-sort"
                />
              </span>
              
              
            </th>
            <th>
              Sections
            </th>
            <th>
              Teams
            </th>
            <th>
              Total Students
            </th>
            <th>
              Total Unregistered
            </th>
            <th
              class="text-center"
            >
              Action(s)
            </th>
          </tr>
        </thead>
        <tbody>
          
          <tr>
            <td>
              CS3281
            </td>
            <td>
              Modifiable Students and Courses
            </td>
            <td
              container="body"
              ng-reflect-container="body"
              ng-reflect-ngb-tooltip="Mon, 05 Nov 2018, 8:15AM"
            >
               5 Nov 2018 
            </td>
            <td>
              
              
              <span>
                 1 
              </span>
            </td>
            <td>
              
              
              <span>
                 1 
              </span>
            </td>
            <td>
              
              
              <span>
                 1 
              </span>
            </td>
            <td>
              
              
              <span>
                 1 
              </span>
            </td>
            <td
              class="text-center actions-cell"
            >
              
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="Enroll student into the course"
                ng-reflect-query-params="[object Object]"
                ng-reflect-router-link="/web/instructor/courses/enroll"
                ngbtooltip="Enroll student into the course"
                routerlink="/web/instructor/courses/enroll"
                tabindex="0"
              >
                 Enroll 
              </button>
              
              
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="View, edit and send invitation"
                ng-reflect-query-params="[object Object]"
                ng-reflect-router-link="/web/instructor/courses/detail"
                ngbtooltip="View, edit and send invitation emails to the students in the course"
                routerlink="/web/instructor/courses/details"
                tabindex="0"
              >
                 View 
              </button>
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="Edit Course information and in"
                ng-reflect-query-params="[object Object]"
                ng-reflect-router-link="/web/instructor/courses/edit"
                ngbtooltip="Edit Course information and instructor list"
                routerlink="/web/instructor/courses/edit"
                tabindex="0"
              >
                 Edit 
              </button>
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="Archive the course so that it "
                ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still
                  access it from the 'Courses' tab)"
              >
                 Archive 
              </button>
              
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="Delete the course and its corr"
                ngbtooltip="Delete the course and its corresponding students and sessions"
              >
                 Delete 
              </button>
              
              
            </td>
          </tr>
          <tr>
            <td>
              CS3282
            </td>
            <td>
              Nothing modifiable
            </td>
            <td
              container="body"
              ng-reflect-container="body"
              ng-reflect-ngb-tooltip="Sat, 02 Feb 2019, 8:15AM"
            >
               2 Feb 2019 
            </td>
            <td>
              
              
              <span>
                 2 
              </span>
            </td>
            <td>
              
              
              <span>
                 2 
              </span>
            </td>
            <td>
              
              
              <span>
                 2 
              </span>
            </td>
            <td>
              
              
              <span>
                 2 
              </span>
            </td>
            <td
              class="text-center actions-cell"
            >
              
              
              <button
                class="btn btn-light btn-sm disabled"
              >
                 Enroll 
              </button>
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="View, edit and send invitation"
                ng-reflect-query-params="[object Object]"
                ng-reflect-router-link="/web/instructor/courses/detail"
                ngbtooltip="View, edit and send invitation emails to the students in the course"
                routerlink="/web/instructor/courses/details"
                tabindex="0"
              >
                 View 
              </button>
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="Edit Course information and in"
                ng-reflect-query-params="[object Object]"
                ng-reflect-router-link="/web/instructor/courses/edit"
                ngbtooltip="Edit Course information and instructor list"
                routerlink="/web/instructor/courses/edit"
                tabindex="0"
              >
                 Edit 
              </button>
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="Archive the course so that it "
                ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still
                  access it from the 'Courses' tab)"
              >
                 Archive 
              </button>
              
              
              <button
                class="btn btn-light btn-sm disabled"
              >
                 Delete 
              </button>
            </td>
          </tr>
        </tbody>
        
      </table>
      
    </div>
  </div><div
    class="course-section"
  >
    <h2
      class="text-muted"
    >
      <span
        class="fa fa-file-archive"
      />
       Archived Courses 
    </h2>
    <div
      class="table-responsive"
    >
      <table
        class="table table-striped table-bordered margin-0"
      >
        <thead>
          <tr
            class="bg-info text-white"
          >
            <th>
              Course ID
            </th>
            <th>
              Course Name
            </th>
            <th>
              Creation Date
            </th>
            <th
              class="text-center"
            >
              Action(s)
            </th>
          </tr>
        </thead>
        <tbody>
          
          <tr>
            <td>
              CS2104
            </td>
            <td>
              Can modify archived
            </td>
            <td
              container="body"
              ng-reflect-container="body"
              ng-reflect-ngb-tooltip="Tue, 05 Nov 2002, 8:15AM"
            >
               5 Nov 2002 
            </td>
            <td
              class="text-center"
            >
              <button
                class="btn btn-light btn-sm"
              >
                 Unarchive 
              </button>
              
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="Delete the course and its corr"
                ngbtooltip="Delete the course and its corresponding students and sessions"
              >
                 Delete 
              </button>
              
              
            </td>
          </tr>
          <tr>
            <td>
              CS2106
            </td>
            <td>
              Cannot modify archived
            </td>
            <td
              container="body"
              ng-reflect-container="body"
              ng-reflect-ngb-tooltip="Tue, 05 Nov 2002, 8:15AM"
            >
               5 Nov 2002 
            </td>
            <td
              class="text-center"
            >
              <button
                class="btn btn-light btn-sm"
              >
                 Unarchive 
              </button>
              
              
              <button
                class="btn btn-light btn-sm disabled"
              >
                 Delete 
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div><div
    class="row course-section margin-top-30px"
  >
    <div
      class="col-12"
    >
      <h2
        class="text-muted"
      >
        <span
          class="fa fa-trash-alt"
        />
         Deleted Courses 
      </h2>
      <div
        class="card bg-light top-padded"
      >
        <div
          class="card-header bg-secondary recycle-bin-header"
        >
          <div
            class="row align-items-center"
          >
            <div
              class="col-6 text-white"
            >
              <b>
                Recycle Bin
              </b>
            </div>
            <div
              class="col-6 text-right bin-header-button"
            >
              
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="Restore all deleted courses an"
                ngbtooltip="Restore all deleted courses and their corresponding students and sessions"
              >
                <i
                  class="fas fa-check"
                />
                 Restore All 
              </button>
              
              
              
              <button
                class="btn btn-light btn-sm text-danger"
                ng-reflect-ngb-tooltip="Permanently delete all courses"
                ngbtooltip="Permanently delete all courses and their corresponding students and sessions"
              >
                <i
                  class="fas fa-times"
                />
                 Delete All 
              </button>
              
              
              
              <i
                class="fas fa-chevron-down text-white"
              />
              
            </div>
          </div>
        </div>
        
      </div>
    </div>
  </div>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap with default fields 1`] = `
<tm-instructor-courses-page
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  archivedCourses={[Function Array]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  httpRequestService={[Function HttpRequestService]}
  isAddNewCourseFormExpanded="false"
  isRecycleBinExpanded="false"
  modalService={[Function NgbModal]}
  route={[Function ActivatedRoute]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableSortBy="0"
  tableSortOrder={[Function Number]}
>
  <div>
    <button
      class="btn btn-primary"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><div
    class="course-section"
    hidden=""
  >
    <tm-add-course-form />
  </div><div
    class="course-section"
  >
    <div
      class="table-responsive"
    >
      <table
        class="table table-striped table-bordered margin-0"
      >
        <thead>
          <tr
            class="bg-primary text-white"
          >
            <th
              class="sortable-header"
            >
               Course ID 
              
              <span>
                <i
                  class="fas fa-sort"
                />
              </span>
              
              
            </th>
            <th
              class="sortable-header"
            >
               Course Name 
              
              <span>
                <i
                  class="fas fa-sort"
                />
              </span>
              
              
            </th>
            <th
              class="sortable-header"
            >
               Creation Date 
              
              <span>
                <i
                  class="fas fa-sort"
                />
              </span>
              
              
            </th>
            <th>
              Sections
            </th>
            <th>
              Teams
            </th>
            <th>
              Total Students
            </th>
            <th>
              Total Unregistered
            </th>
            <th
              class="text-center"
            >
              Action(s)
            </th>
          </tr>
        </thead>
        <tbody>
          
        </tbody>
        
        <tr>
          <td />
          <td />
          <td />
          <td />
          <td />
          <td />
          <td />
          <td />
        </tr>
      </table>
      
      <p>
        No records found.
      </p>
    </div>
  </div>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap with no courses in course stats 1`] = `
<tm-instructor-courses-page
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  activeCourses={[Function Array]}
  archivedCourses={[Function Array]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  httpRequestService={[Function HttpRequestService]}
  isAddNewCourseFormExpanded="false"
  isRecycleBinExpanded="false"
  modalService={[Function NgbModal]}
  route={[Function ActivatedRoute]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableSortBy="0"
  tableSortOrder={[Function Number]}
>
  <div>
    <button
      class="btn btn-primary"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><div
    class="course-section"
    hidden=""
  >
    <tm-add-course-form />
  </div><div
    class="course-section"
  >
    <div
      class="table-responsive"
    >
      <table
        class="table table-striped table-bordered margin-0"
      >
        <thead>
          <tr
            class="bg-primary text-white"
          >
            <th
              class="sortable-header"
            >
               Course ID 
              
              <span>
                <i
                  class="fas fa-sort"
                />
              </span>
              
              
            </th>
            <th
              class="sortable-header"
            >
               Course Name 
              
              <span>
                <i
                  class="fas fa-sort"
                />
              </span>
              
              
            </th>
            <th
              class="sortable-header"
            >
               Creation Date 
              
              <span>
                <i
                  class="fas fa-sort"
                />
              </span>
              
              
            </th>
            <th>
              Sections
            </th>
            <th>
              Teams
            </th>
            <th>
              Total Students
            </th>
            <th>
              Total Unregistered
            </th>
            <th
              class="text-center"
            >
              Action(s)
            </th>
          </tr>
        </thead>
        <tbody>
          
          <tr>
            <td>
              CS3281
            </td>
            <td>
              Modifiable Students and Courses
            </td>
            <td
              container="body"
              ng-reflect-container="body"
              ng-reflect-ngb-tooltip="Mon, 05 Nov 2018, 8:15AM"
            >
               5 Nov 2018 
            </td>
            <td>
              
              <span>
                <a
                  href="null"
                >
                   show 
                </a>
              </span>
              
            </td>
            <td>
              
              <span>
                <a
                  href="null"
                >
                   show 
                </a>
              </span>
              
            </td>
            <td>
              
              <span>
                <a
                  href="null"
                >
                   show 
                </a>
              </span>
              
            </td>
            <td>
              
              <span>
                <a
                  href="null"
                >
                   show 
                </a>
              </span>
              
            </td>
            <td
              class="text-center actions-cell"
            >
              
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="Enroll student into the course"
                ng-reflect-query-params="[object Object]"
                ng-reflect-router-link="/web/instructor/courses/enroll"
                ngbtooltip="Enroll student into the course"
                routerlink="/web/instructor/courses/enroll"
                tabindex="0"
              >
                 Enroll 
              </button>
              
              
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="View, edit and send invitation"
                ng-reflect-query-params="[object Object]"
                ng-reflect-router-link="/web/instructor/courses/detail"
                ngbtooltip="View, edit and send invitation emails to the students in the course"
                routerlink="/web/instructor/courses/details"
                tabindex="0"
              >
                 View 
              </button>
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="Edit Course information and in"
                ng-reflect-query-params="[object Object]"
                ng-reflect-router-link="/web/instructor/courses/edit"
                ngbtooltip="Edit Course information and instructor list"
                routerlink="/web/instructor/courses/edit"
                tabindex="0"
              >
                 Edit 
              </button>
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="Archive the course so that it "
                ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still
                  access it from the 'Courses' tab)"
              >
                 Archive 
              </button>
              
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="Delete the course and its corr"
                ngbtooltip="Delete the course and its corresponding students and sessions"
              >
                 Delete 
              </button>
              
              
            </td>
          </tr>
          <tr>
            <td>
              CS3282
            </td>
            <td>
              Nothing modifiable
            </td>
            <td
              container="body"
              ng-reflect-container="body"
              ng-reflect-ngb-tooltip="Sat, 02 Feb 2019, 8:15AM"
            >
               2 Feb 2019 
            </td>
            <td>
              
              <span>
                <a
                  href="null"
                >
                   show 
                </a>
              </span>
              
            </td>
            <td>
              
              <span>
                <a
                  href="null"
                >
                   show 
                </a>
              </span>
              
            </td>
            <td>
              
              <span>
                <a
                  href="null"
                >
                   show 
                </a>
              </span>
              
            </td>
            <td>
              
              <span>
                <a
                  href="null"
                >
                   show 
                </a>
              </span>
              
            </td>
            <td
              class="text-center actions-cell"
            >
              
              
              <button
                class="btn btn-light btn-sm disabled"
              >
                 Enroll 
              </button>
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="View, edit and send invitation"
                ng-reflect-query-params="[object Object]"
                ng-reflect-router-link="/web/instructor/courses/detail"
                ngbtooltip="View, edit and send invitation emails to the students in the course"
                routerlink="/web/instructor/courses/details"
                tabindex="0"
              >
                 View 
              </button>
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="Edit Course information and in"
                ng-reflect-query-params="[object Object]"
                ng-reflect-router-link="/web/instructor/courses/edit"
                ngbtooltip="Edit Course information and instructor list"
                routerlink="/web/instructor/courses/edit"
                tabindex="0"
              >
                 Edit 
              </button>
              <button
                class="btn btn-light btn-sm"
                ng-reflect-ngb-tooltip="Archive the course so that it "
                ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still
                  access it from the 'Courses' tab)"
              >
                 Archive 
              </button>
              
              
              <button
                class="btn btn-light btn-sm disabled"
              >
                 Delete 
              </button>
            </td>
          </tr>
        </tbody>
        
      </table>
      
    </div>
  </div>
</tm-instructor-courses-page>
`;
